cmake_minimum_required(VERSION 2.6)

PROJECT(OCSSW)

ADD_LIBRARY(oli STATIC
  get_oli_nom_angles.c
  mtl_geometry.c
  mtl_grid.c
  smeta_api.c
  smeta_exploit.c
  smeta_geometry.c
  emeta_api.c
  emeta.c
  emeta_exploit.c
  emeta_geometry.c
  get_l8_angles.c
  ias_geo_convert_deg2dms.c
  ias_geo_convert_dms2deg.c
  ias_geo_convert_geod2cart.c
  ias_geo_find_deg.c
  ias_geo_find_min.c
  ias_geo_find_sec.c
  ias_geo_projection_transformation.c
  ias_logging.c
  ias_math_compute_3dvec_dot.c
  ias_math_compute_unit_vector.c
  ias_math_compute_vector_length.c
  ias_math_interpolate_lagrange_3dvec.c
  ias_odl_free_tree.c
  ias_odl_get_field.c
  ias_odl_read_tree.c 
  lablib3.c
  alberfor.c
  alberinv.c
  alconfor.c
  alconinv.c
  azimfor.c
  aziminv.c
  br_gctp.c
  cproj.c
  eqconfor.c
  eqconinv.c
  equifor.c
  equiinv.c
  for_init.c
  gctp.c
  gctp_create_transformation.c
  gctp_dms2degrees.c
  gctp_print_message.c
  gctp_report.c
  gctp_transform.c
  gctp_utility.c
  geographic.c
  gnomfor.c
  gnominv.c
  goodfor.c
  goodinv.c
  gvnspfor.c
  gvnspinv.c
  hamfor.c
  haminv.c
  imolwfor.c
  imolwinv.c
  inv_init.c
  isinfor.c
  isininv.c
  lamazfor.c
  lamazinv.c
  lambert_conformal_conic.c
  merfor.c
  merinv.c
  millfor.c
  millinv.c
  molwfor.c
  molwinv.c
  obleqfor.c
  obleqinv.c
  oblique_mercator.c
  orthfor.c
  orthinv.c
  paksz.c
  polar_stereographic.c
  polyconic.c
  robfor.c
  robinv.c
  sinfor.c
  sininv.c
  som.c
  sphdz.c
  spload.c
  state_plane.c
  sterfor.c
  sterinv.c
  tm.c
  untfz.c
  vandgfor.c
  vandginv.c
  wivfor.c
  wivinv.c
  wviifor.c
  wviiinv.c
)


target_link_libraries(oli
  m
 )
