cmake_minimum_required(VERSION 2.6)

PROJECT(OCSSW)

ADD_LIBRARY(swfnav STATIC
  actrng.f
  add_elements.f
  angles.f
  anomly.f
  asap_rot_int.f
  asap_rots.f
  asaps.f
  attcmp.f
  attdet.f
  cmpaxm.f
  conv_ins.f
  conv_soh.f
  conv_tilt.f
  coord.f
  delm.f
  dens76.f
  der.f
  earcnst.f
  earcomp.f
  earth.f
  earthsundist.f
  eartol.f
  eaxis.f
  ecef.f
  eci2ecef.f
  ellxfm.f
  ephem.f
  eqnox.f
  euler.f
  fit3t.f
  fitgps.f
  fitrng.f
  fndflg.f
  get_elements.f
  get_node.f
  getorbit.f
  initnav.f
  inline.f
  intpos.f
  invert.f
  jdate.f
  jddate.f
  jul2yds.f
  julian.f
  kepler.f
  kozsak2.f
  leapchk.f
  legend.f
  matvec.f
  matvec2.f
  mediqr.f
  navtlm.f
  orb_interp.f
  orbcomp.f
  pderiv.f
  pout.f
  proctim2.f
  put_elements.f
  read_analog.f
  read_discrete.f
  read_double.f
  read_float.f
  read_gps.f
  read_long.f
  read_short.f
  readctl.f
  readqc.f
  rk78.f
  rk78cn.f
  runfit3t.f
  sc_att.f
  scpar.f
  sctime.f
  select.f
  setsun.f
  setthd.f
  suncnst.f
  suncomp.f
  suntol.f
  sunvec.f
  sunwgt.f
  swfnav.f
  tiltcomp.f
  vec2mean.f
  vmag.f
  xpose.f
  xthird.f
  yd2ymd.f
  yds2jul.f
  ydsadd.f
  ymd2day.f
  ymdhms2jul.f
)

target_link_libraries(swfnav
  nav
  genutils
)
